--- a/styles/style.css
+++ b/styles/style.css
@@ -14,14 +14,7 @@
   display: flex;
   flex-direction: row;
   position: relative;
-  background-color: #f2f2f2;;
-}
-
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  background-color: #f2f2f2;
 }
 
 .header__logo {
@@ -92,6 +85,7 @@
   width: 100%;
   justify-content: center;
   margin-top: 100px;
+  border: 3px solid #f2f2f2;
 }
 
 .two-columns {
@@ -139,6 +133,7 @@
   flex-direction: column;
   align-items: center;
   background-color: white;
+  border: 2px solid #f2f2f2;
 }
 
 .section-title {
@@ -284,6 +279,10 @@
 }
 
 .table__cell_theme_dark {
+  width: 200px;
+  color: white;
+  margin-right: 0;
+  margin-top: 80px;
   display: flex;
   flex-direction: column;
   width: 200px;
@@ -321,7 +320,6 @@
 .footer {
   background-color: #1f1f1f;
   min-height: 350px;
-
   border: 1px solid #1f1f1f;
 }
 
