--- a/styles/style.css
+++ b/styles/style.css
@@ -18,14 +18,14 @@
 }
 
 .header__logo {
+  min-height: fit-content;
+  min-width: fit-content;
   width: 228px;
   height: 32px;
   z-index: 0;
 }
 
-.logo_place_header {
-  min-height: fit-content;
-  min-width: fit-content;
+.header__logo_place_header {
   position: absolute;
   top: 30px;
   left: 64px;
@@ -36,7 +36,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
@@ -46,12 +46,11 @@
 .header__subtitle {
   width: 338px;
   min-height: fit-content;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
+  display: inline-block;
   position: absolute;
   left: 64px;
   bottom: 30px;
+  margin: 0 0;
   line-height: 25px;
   font-size: 18px;
   font-style: normal;
@@ -59,15 +58,13 @@
 }
 
 .header__main-illustration {
-  min-height: fit-content;
-  min-width: fit-content;
   height: 608px;
   width: 765px;
   max-width: 765px;
   max-height: 608px;
   position: absolute;
-  right: 0px;
-  bottom: 0px;
+  right: 0;
+  bottom: 0;
   z-index: 1;
 }
 
@@ -84,6 +81,8 @@
 }
 
 .header__link {
+  display: inline-block;
+  min-width: max-content;
   text-decoration: none;
   color: #2f80ed;
 }
@@ -102,11 +101,11 @@
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  min-height: 30px;
 }
 
 .two-columns__brief {
   width: 175px;
+  margin: 0;
   color: #2f80ed;
   line-height: 1.2;
   font-size: 18px;
@@ -114,23 +113,24 @@
 }
 
 .two-columns__main-text {
+  display: flex;
+  flex-direction: column;
   width: 80%;
   min-width: 784px;
   }
 
 .two-columns__paragraph {
-  display: inline-block;
+  margin: 0 0 30px 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin-top: 15px;
-  margin-bottom: 15px;
+}
+
+.two-columns__paragraph:nth-of-type(3n) {
+  margin-bottom: 0;
 }
 
 .two-columns__span-accent {
-  display: inline-block;
-  line-height: 34px;
-  font-size: 24px;
   font-weight: 600;
 }
 
@@ -163,8 +163,7 @@
   font-weight: normal;
   display: flex;
   justify-content: center;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .table {
@@ -184,20 +183,21 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
-  margin-top: 0;
+  margin: 0;
 }
 
 .table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  margin-top: 20px;
   margin-bottom: 0;
 }
 
 /* Фейнман */
 
 .feynman {
-  height: 890px;
+  min-height: 890px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -222,6 +222,7 @@
 .feynman__subtitle {
   display: flex;
   margin-top: 70px;
+  margin-bottom: 0;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
@@ -229,17 +230,15 @@
 }
 
 .feynman__link {
-  min-height: fit-content;
   min-width: fit-content;
-  height: 50%;
+  height: fit-content;
   display: flex;
-  justify-content: center;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
   position: absolute;
   right: 48px;
-  bottom: 0;
+  bottom: 50%;
   z-index: 1;
   text-decoration: none;
   color: #2f80ed;
@@ -271,7 +270,6 @@
 }
 
 .section-title_theme_dark {
-  width: 60%;
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
@@ -282,7 +280,6 @@
 }
 
 .section-subtitle_theme_dark {
-  width: 60%;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -299,7 +296,6 @@
   margin-top: 80px;
   display: flex;
   flex-direction: column;
-  margin: 80px auto 0;
 }
 
   .table__heading_theme_dark {
@@ -320,6 +316,7 @@
 }
 
 .kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
   min-height: fit-content;
   min-width: fit-content;
   width: 877px;
@@ -333,28 +330,27 @@
 /* Подвал сайта */
 
 .footer {
+  display: flex;
+
   background-color: #1f1f1f;
   min-height: 350px;
-  border: 1px solid #1f1f1f;
 }
 
 .footer__columns {
   width: 90%;
-  height: fit-content;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  flex-basis: 711px;
   margin: 60px auto 40px;
 }
 
 .footer__column_content_copyright {
-  width: 50%;
-  height: 250px;
+  flex-basis: 711px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+
 }
 
 .logo_place_footer {
@@ -372,13 +368,13 @@
 }
 
 .footer__column_content_info {
-  width: 10%;
   display: flex;
   flex-direction: column;
 }
 
 .footer__column-heading {
   margin-top: 0;
+  margin-bottom: 20px;
   line-height: 30px;
   font-size: 18px;
   font-weight: 600;
@@ -387,32 +383,28 @@
 }
 
 .footer__column-links {
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: normal;
-  color: white;
-  text-decoration: none;
-}
-
-.footer__column_content_social {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  color: white;
+  text-decoration: none;
+  margin-bottom: 20px;
 }
 
-.social-icon {
-  display: flex;
-  width: 15px;
-  height: 15px;
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
 }
 
 .footer__column-link {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
   display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: 10px;
   color: white;
   text-decoration: none;
 }
 
-.footer__social-element {
-  display: flex;
-  flex-wrap: nowrap;
-  gap: 10px;
-}
