--- a/styles/style.css
+++ b/styles/style.css
@@ -17,12 +17,15 @@
   background-color: #f2f2f2;
 }
 
+.logo {
+  width: 228px;
+  height: 32px;
+}
+
 .logo_place_header {
   position: absolute;
   top: 30px;
   left: 64px;
-  width: 228px;
-  height: 32px;
   z-index: 0;
 }
 
@@ -326,7 +329,6 @@
 
 .footer {
   display: flex;
-
   background-color: #1f1f1f;
   min-height: 350px;
 }
@@ -349,8 +351,7 @@
 }
 
 .logo_place_footer {
-  width: 228px;
-  height: 32px;
+  background-image: url(../images/logo_place_footer.svg);
 }
 
 .footer__author {
