--- a/blocks/footer/__column/_content/footer__column_content_social.css
+++ b/blocks/footer/__column/_content/footer__column_content_social.css
@@ -1,4 +1,6 @@
 .footer__column_content_social {
   min-width: fit-content;
   min-height: fit-content;
+  display: flex;
+  flex-direction: column;
 }
