--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -7,7 +7,7 @@
   font-weight: normal;
   position: absolute;
   right: 48px;
-  bottom: 50%;
+  top: 50%;
   z-index: 1;
   text-decoration: none;
   color: #2f80ed;
