--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -4,5 +4,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
+  padding-top: 100px;
+  box-sizing: border-box;
   background-color: #f2f2f2;
 }
