--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -4,7 +4,6 @@
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
-  display: flex;
-  justify-content: center;
+  text-align: center;
   margin: 0 auto 20px;
 }
